# ActVibSoftware

./: .gitignore  installmodules.bat  main.py  pyproject.toml  run.py
ActVib/: ADCPanel.py  Additional.py  AutomatorDialog.py  BaseFigQtGraph.py  ControlPanel.py  DSP.py  DataViewer.py  GeneratorPanel.py  IMUPanel.py  MainFigContextMenu.py  PathModeling.py  PlotCfgPanel.py  PlotDialog.py  PreDist.py  UpdaterDialog.py  UploadDialog.py  VibViewWindow.py  WorkdirDialog.py  __main__.py  automator.py  dataman.py  dialogs.py  driverhardware.py  figures.py  firmwareupdater.py  mainwindow.py  others.py  panels.py  updater.py
uifiles/: ADCPanel.ui  Additional.ui  AutomatorDialog.ui  ControlPanel.ui  DataViewer.ui  GeneratorPanel.ui  IMUPanel - Copia.ui  IMUPanel.ui  MainFigContextMenu.ui  PathModeling.ui  PlotCfgPanel.ui  PlotDialog.ui  PreDist.ui  UpdaterDialog.ui  UploadDialog.ui  VibViewWindow - Copia (2).ui  VibViewWindow - Copia.ui  VibViewWindow.ui  VibViewWindow_UI_to_PY.bat  VibViewWindow_UI_to_PY.sh  WorkdirDialog.ui  convert_uis_to_py.py
