[project]
name = "actvibsoftware"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "esptool>=4.8.1",
    "numpy>=2.2.6",
    "pandas>=2.3.0",
    "pyarrow>=20.0.0",
    "pyqtdarktheme>=2.1.0",
    "pyqtgraph>=0.13.7",
    "pyserial>=3.5",
    "pyside6==6.9.0",
    "qt-material>=2.17",
    "scipy>=1.15.3",
]
